# Bespojke

./: Latest Eagle Bulk SGTD GET CONFIG API Test.py  app.py  forms.py  gcreds.json  mymap.html  pyproject.toml  requirements.txt  streamlit_call.py
static/: SG_anchorages.geojson  sg_cities.csv  singapore_administrative_region_boundaries.geojson
templates/: footer.html  home.html  jobitem.html  mymap.html  nav.html
