[tool.poetry]
name = "repl_nix_Bespojke"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
Flask = "^2.3.3"
requests = "^2.31.0"
WTForms = "^3.0.1"
xds-protos = "^0.0.11"
Flask-WTF = "^1.1.1"
google-api-python-client = "^2.97.0"
google-auth-oauthlib = "^1.0.0"
pygsheets = "^2.0.6"
earthengine-api = "^0.1.367"
geemap = "^0.25.0"
streamlit = "^1.26.0"
leafmap = "0.23.3"
geopandas = "0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
